[FEAT] 자동 완성 검색 기능 구현

--- a/app/src/main/res/layout/activity_apply.xml
+++ b/app/src/main/res/layout/activity_apply.xml
@@ -13,9 +13,12 @@
         android:layout_height="58dp"
         android:gravity="center_vertical"
         android:text="약속 신청"
-        android:textColor="@color/black"
-        android:textSize="18sp"
+        android:fontFamily="@font/spoqa_han_sans_neo_bold"
         android:textStyle="bold"
+        android:textSize="18sp"
+        android:textColor="#000000"
+        android:letterSpacing="-0.01"
+        android:lineSpacingExtra="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
