--- a/app/src/main/res/layout/fragment_first_apply.xml
+++ b/app/src/main/res/layout/fragment_first_apply.xml
@@ -40,7 +40,7 @@
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/apply_friend"
         app:layout_constraintTop_toTopOf="@+id/apply_friend" />
-
+<!--
     <EditText
         android:id="@+id/et_to_who"
         android:layout_width="0dp"
@@ -57,7 +57,54 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/apply_apply"
         app:layout_constraintTop_toBottomOf="@+id/apply_apply" />
+-->
+    <!--
+    <LinearLayout
+        android:layout_width="368dp"
+        android:layout_height="300dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextView"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:completionThreshold="1"
+            android:gravity="center_vertical"
+            android:textColorHint="#555555" />
+    </LinearLayout>
+-->
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/et_to_who"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="16dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/apply_apply"
+        app:layout_constraintTop_toBottomOf="@+id/apply_apply">
+
+        <AutoCompleteTextView
+            android:id="@+id/auto_et_to_who"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:background="@drawable/selector_apply_search"
+            android:completionThreshold="1"
+            android:drawableLeft="@drawable/ic_search_black"
+            android:drawablePadding="2dp"
+            android:gravity="center_vertical"
+            android:hint="받는 사람 :"
+            android:inputType="textPersonName"
+            android:maxLines="1"
+            android:textColorHint="#555555"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/apply_appointment"
@@ -148,7 +195,7 @@
 
 
         <View
-            android:id="@+id/view"
+            android:id="@+id/apply_content_view"
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_marginStart="14dp"
@@ -172,7 +219,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/cl_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view" />
+            app:layout_constraintTop_toBottomOf="@+id/apply_content_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
