--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -9,29 +9,31 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_noti_topbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
+        android:background="@color/gray01"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/iv_noti_top_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_arrow_back_ios_24"
+            android:src="@drawable/ic_btn_back"
+            android:layout_marginVertical="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:padding="5dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginStart="21dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/spoqa_han_sans_neo_bold"
             android:text="@string/noti_title"
-            android:textSize="25dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textColor="@color/gray06"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="10dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -39,15 +41,17 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tl_noti"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cl_noti_topbar"
+        app:tabBackground="@color/gray01"
         app:tabIconTint="@null"
         app:tabIndicatorColor="@color/black"
+        app:tabIndicatorHeight="3dp"
         app:tabRippleColor="@null"
-        app:tabSelectedTextColor="@color/pink"
-        app:tabTextColor="@color/gallery"/>
+        app:tabSelectedTextColor="@color/black"
+        app:tabTextColor="@color/black" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_noti"
