--- a/app/src/main/res/layout/item_notification_receive.xml
+++ b/app/src/main/res/layout/item_notification_receive.xml
@@ -6,9 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="20dp"
-    android:layout_marginBottom="25dp"
-    android:background="@drawable/rectangle_white_20"
-    android:elevation="10dp">
+    android:layout_marginBottom="29dp"
+    android:background="@drawable/rectangle_white_10"
+    android:elevation="5dp">
 
 
     <TextView
@@ -17,9 +17,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:text="@string/noti_receive"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:fontFamily="@font/spoqa_han_sans_neo_bold"
+        android:textColor="@color/gray06"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,9 +27,10 @@
         android:id="@+id/tv_receive_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="5dp"
         android:text="@string/noti_day"
-        android:textSize="13dp"
+        android:textColor="@color/gray04"
+        android:textSize="13sp"
+        android:fontFamily="@font/spoqa_han_sans_neo_regular"
         app:layout_constraintBottom_toBottomOf="@id/tv_receive"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_receive" />
@@ -40,8 +41,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:text="@string/noti_receive_msg"
-        android:textColor="@color/black"
-        android:textSize="16dp"
+        android:textColor="@color/gray06"
+        android:textSize="16sp"
+        android:fontFamily="@font/spoqa_han_sans_neo_regular"
         app:layout_constraintTop_toBottomOf="@id/rv_receive_friend_list"
         app:layout_constraintStart_toStartOf="@id/tv_receive"
         />
@@ -50,7 +52,6 @@
         android:id="@+id/rv_receive_friend_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
         android:layout_marginTop="15dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
