--- a/app/src/main/res/layout/item_notification_receive_friend_list.xml
+++ b/app/src/main/res/layout/item_notification_receive_friend_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
@@ -11,17 +12,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:paddingTop="5dp"
-            android:paddingLeft="13dp"
-            android:paddingRight="13dp"
-            android:paddingBottom="5dp"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="13dp"
             android:background="@drawable/rectangle_black_radius_16"
-            android:text="김준희"
             android:textColor="@color/white"
             android:textSize="13sp"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="김준희"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
