--- a/app/src/main/res/layout/item_notification_send_friend_list.xml
+++ b/app/src/main/res/layout/item_notification_send_friend_list.xml
@@ -12,17 +12,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:paddingTop="5dp"
-            android:paddingLeft="13dp"
-            android:paddingRight="13dp"
-            android:paddingBottom="5dp"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="13dp"
             android:background="@drawable/rectangle_pink_line_radius_16"
-            android:text="김준희"
             android:textColor="@color/pink"
             android:textSize="13sp"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="김준희"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
