--- a/app/src/main/res/drawable/ic_arrow_right.xml
+++ b/app/src/main/res/drawable/ic_arrow_right.xml
@@ -1,12 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="9dp"
-    android:height="13dp"
-    android:viewportWidth="9"
-    android:viewportHeight="13">
+    android:width="24dp"
+    android:height="32dp"
+    android:viewportWidth="24"
+    android:viewportHeight="32">
   <path
-      android:pathData="M1,1L7,6.5L1,12"
-      android:strokeWidth="2"
+      android:strokeWidth="1"
+      android:pathData="M10,9L15,14L10,19"
       android:fillColor="#00000000"
-      android:strokeColor="#D8D8D8"
+      android:strokeColor="#A3A3A3"
       android:strokeLineCap="round"/>
 </vector>
