--- a/app/src/main/res/drawable/rectangle_gray_line_radius_16.xml
+++ b/app/src/main/res/drawable/rectangle_gray_line_radius_16.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="16dp" />
-    <stroke android:width="1dp" android:color="@color/silver_chalice" />
+    <stroke android:width="1dp" android:color="@color/gray04" />
 
 </shape>
