--- a/app/src/main/res/layout/fragment_noti_in_progress.xml
+++ b/app/src/main/res/layout/fragment_noti_in_progress.xml
@@ -6,59 +6,70 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.notification.inprogress.NotiInProgressFragment">
 
-    <TextView
-        android:id="@+id/tv_in_progress"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_noti_ing_topbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/noti_in_progress"
-        android:textSize="24dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="25dp" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tv_in_progress2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/tv_in_progress"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/noti_in_progress2"
-        android:textSize="24dp"
-        android:textColor="@color/black"
-        android:layout_marginTop="25dp" />
+        <TextView
+            android:id="@+id/tv_in_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginVertical="30dp"
+            android:text="@string/noti_in_progress"
+            android:textColor="@color/gray06"
+            android:textSize="24sp"
+            android:fontFamily="@font/spoqa_han_sans_neo_bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_in_progress_num2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="20dp"
-        android:text="@string/noti_num"
-        android:textSize="24dp"
-        android:textColor="@color/black"
-        android:layout_marginTop="25dp" />
+        <TextView
+            android:id="@+id/tv_in_progress2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/noti_in_progress2"
+            android:textColor="@color/gray06"
+            android:textSize="24sp"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_in_progress"
+            app:layout_constraintStart_toEndOf="@id/tv_in_progress"
+            app:layout_constraintTop_toTopOf="@id/tv_in_progress" />
 
-    <TextView
-        android:id="@+id/tv_in_progress_num"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/tv_in_progress_num2"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/noti_in_progress_num"
-        android:textSize="24dp"
-        android:textColor="@color/pink"
-        android:layout_marginTop="25dp" />
+        <TextView
+            android:id="@+id/tv_in_progress_num2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="16dp"
+            android:fontFamily="@font/din_pro_regular"
+            android:text="@string/noti_num"
+            android:textColor="@color/gray06"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_in_progress_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/din_pro_bold"
+            android:text="@string/noti_in_progress_num"
+            android:textColor="@color/pink"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_in_progress_num2"
+            app:layout_constraintEnd_toStartOf="@id/tv_in_progress_num2"
+            app:layout_constraintTop_toTopOf="@+id/tv_in_progress_num2" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_in_progress"
+        app:layout_constraintTop_toBottomOf="@+id/cl_noti_ing_topbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" >
 
@@ -66,12 +77,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
-
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginHorizontal="16dp"
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
