--- a/app/src/main/res/layout/item_notification_done.xml
+++ b/app/src/main/res/layout/item_notification_done.xml
@@ -5,7 +5,6 @@
     android:id="@+id/cl_noti_done_bg"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp"
     android:layout_marginBottom="25dp"
     android:elevation="10dp">
 
@@ -14,10 +13,12 @@
         android:id="@+id/tv_done_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
         android:text="@string/noti_day"
-        android:textSize="14dp"
-        android:textColor="@color/silver_chalice"
+        android:textSize="14sp"
+        android:textColor="@color/gray04"
+        android:fontFamily="@font/spoqa_han_sans_neo_regular"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,10 +26,12 @@
         android:id="@+id/tv_confirm_or_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="6dp"
         android:text="@string/noti_confirm_or_cancel"
-        android:textSize="14dp"
         android:textColor="@color/pink"
+        android:textSize="14sp"
+        android:fontFamily="@font/spoqa_han_sans_neo_regular"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_done_day"
         app:layout_constraintStart_toEndOf="@id/tv_done_day"
         app:layout_constraintTop_toTopOf="@id/tv_done_day" />
 
@@ -36,7 +39,6 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_done_title"
         app:layout_constraintStart_toEndOf="@+id/tv_done_title"
         app:layout_constraintTop_toTopOf="@+id/tv_done_title"
@@ -46,28 +48,37 @@
         android:id="@+id/tv_done_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:text="@string/noti_done_title"
         android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="20dp"
+        android:fontFamily="@font/spoqa_han_sans_neo_bold"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/tv_done_day"
         app:layout_constraintStart_toStartOf="@id/tv_done_day"
         />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_close_48" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_send_friend_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginVertical="15dp"
+        android:layout_marginEnd="16dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/tv_done_title"
         app:layout_constraintTop_toBottomOf="@id/tv_done_title"
-        tools:listitem="@layout/item_notification_done_friend_list"
-        tools:itemCount="3"/>
+        tools:itemCount="3"
+        tools:listitem="@layout/item_notification_done_friend_list" />
 
 
 
