--- a/app/src/main/res/layout/item_apply_search_friend.xml
+++ b/app/src/main/res/layout/item_apply_search_friend.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_apply_searcch_friend"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
-    <ImageView
+<!--    <ImageView
         android:id="@+id/iv_apply_profile"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/ic_launcher_background" />
-
+-->
     <TextView
         android:id="@+id/tv_apply_name"
         android:layout_width="wrap_content"
@@ -24,9 +24,13 @@
         android:layout_marginStart="18dp"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_apply_profile"
-        app:layout_constraintStart_toEndOf="@id/iv_apply_profile"
-        app:layout_constraintTop_toTopOf="@+id/iv_apply_profile"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <!--
+    app:layout_constraintBottom_toBottomOf="@+id/iv_apply_profile"
+
+    app:layout_constraintStart_toEndOf="@id/iv_apply_profile"
+    app:layout_constraintTop_toTopOf="@+id/iv_apply_profile"-->
         tools:text="김준희" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
