[MOD] 텍스트뷰 영역 수정에 따른 마진값 일부 수정

--- a/app/src/main/res/layout/item_notification_done.xml
+++ b/app/src/main/res/layout/item_notification_done.xml
@@ -5,7 +5,7 @@
     android:id="@+id/cl_noti_done_bg"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="25dp"
+    android:layout_marginBottom="8dp"
     android:elevation="10dp">
 
 
@@ -13,7 +13,7 @@
         android:id="@+id/tv_done_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="14dp"
         android:layout_marginStart="16dp"
         android:text="@string/noti_day"
         android:textSize="14sp"
@@ -48,7 +48,7 @@
         android:id="@+id/tv_done_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
         android:text="@string/noti_done_title"
         android:textColor="@color/black"
         android:fontFamily="@font/spoqa_han_sans_neo_bold"
@@ -69,7 +69,8 @@
         android:id="@+id/rv_send_friend_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="15dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginEnd="16dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -79,6 +80,14 @@
         app:layout_constraintTop_toBottomOf="@id/tv_done_title"
         tools:itemCount="3"
         tools:listitem="@layout/item_notification_done_friend_list" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray02"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 
