[FEAT] 받은 신청 ~ 체크박스까지

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,5 @@
     <color name="gray05">#4B4B4B</color>
     <color name="gray06">#1C1C1C</color>
 
-
+    <color name="orange">#ff9e44</color>
 </resources>
