--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="viewModel"
+            type="org.seemeet.seemeet.ui.viewmodel.HomeViewModel" />
+    </data>
+
+    <androidx.drawerlayout.widget.DrawerLayout
     tools:context=".ui.main.HomeFragment"
     android:id="@+id/dl_home_mypage"
     android:layout_width="match_parent"
@@ -193,7 +200,9 @@
         android:layout_gravity="start"
         android:visibility="visible">
 
-       <include android:id="@+id/nv_mypage" layout="@layout/view_mypage"/>
+        <include android:id="@+id/nv_mypage" layout="@layout/view_mypage"/>
 
     </com.google.android.material.navigation.NavigationView>
 </androidx.drawerlayout.widget.DrawerLayout>
+
+</layout>
