--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SeeMeet" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.SeeMeet" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -22,4 +22,13 @@
     <style name="Theme.SeeMeet.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.SeeMeet.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="chipTextPinkStyle">
+        <item name="android:textColor">@color/pink01</item>
+        <item name="android:textSize">13sp</item>
+    </style>
+    <style name="chipTextWhiteStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">13sp</item>
+    </style>
 </resources>
